ObjectFinalizer now relies on Cleaner instead of the finalize method.